// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test select focus & blur methods 1`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller var-field-decorator--focus" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow var-select--arrow-rotate" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--focus var-field-decorator--placeholder-hint" for="" style="transform: translate(-0, 0) scale(0.75);"><span class="var-field-decorator__placeholder-text"></span></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot var-field-decorator--line-focus"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select focus & blur methods 2`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for="" style=""><span class="var-field-decorator__placeholder-text"></span></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select hint to be false 1`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer;">
        <div class="var-field-decorator__icon var-field-decorator--non-hint"></div>
        <div class="var-field-decorator__wrap var-field-decorator--wrap-non-hint">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label"><span></span></div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--placeholder-non-hint var-field-decorator--placeholder-hidden" for=""><span class="var-field-decorator__placeholder-text"></span></label>
        </div>
        <div class="var-field-decorator__icon var-field-decorator--non-hint">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select size 1`] = `
"<div class="var-select" value="">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard var-field-decorator--small">
      <div class="var-field-decorator__controller" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for=""><span class="var-field-decorator__placeholder-text"></span></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select validation 1`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller var-field-decorator--error" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select var-select--error" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--error" for=""><span class="var-field-decorator__placeholder-text"></span></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line var-field-decorator--line-error">
        <div class="var-field-decorator__dot var-field-decorator--line-error"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>您必须选择一个</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test select variant 1`] = `
"<div class="var-select" value="">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for=""><span class="var-field-decorator__placeholder-text"></span></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select variant 2`] = `
"<div class="var-select" value="">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--outlined">
      <div class="var-field-decorator__controller" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for=""><span class="var-field-decorator__placeholder-text"></span></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <fieldset class="var-field-decorator__line var--box">
        <legend class="var-field-decorator__line-legend"><span class="var-field-decorator__line-legend-placeholder"></span></legend>
      </fieldset>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
